--- a/cv_alexandra_zhos.html
+++ b/cv_alexandra_zhos.html
@@ -224,7 +224,7 @@
         <h2>KEY SKILLS</h2>
         <div class="skills-grid-container">
             <div class="skill-category">
-                <h3>Project Management & Strategic Leadership:</h3>
+                <h3>Project Management:</h3>
                 <ul>
                     <li>Project Planning & Coordination</li>
                     <li>Market & Trend Analysis</li>
