--- a/cv_alexandra_zhos.html
+++ b/cv_alexandra_zhos.html
@@ -262,64 +262,74 @@
         <h2>PROFESSIONAL EXPERIENCE</h2>
 
         <div class="experience-item">
-            <h3>Freelance Marketing Consultancy | Telegram Mini-app Game | April – June 2025</h3>
+            <h3>Freelance Marketing Consultancy | Web3 Project: Telegram Mini-app Game | April – June 2025</h3>
             <ul>
-                <li>Researched and analyzed competitors' growth strategies.</li>
-                <li>Developed hypotheses for marketing and launch strategy.</li>
+                <li>For a newly emerging Telegram Mini-App game, I researched and analyzed the best practices of top-performing competitors and their growth journeys.</li>
+                <li>Then, I developed hypotheses for the marketing strategy and the product launch campaign.</li>
             </ul>
         </div>
 
         <div class="experience-item">
-            <h3>Business Development Manager | Web3 Startup | Oct 2024 – Mar 2025</h3>
+            <h3>Business Development Manager | Web3 Startup (Ordinals Marketplace / Gamified AI-generation tool for artists) | October 2024 – March 2025</h3>
             <ul>
-                <li>Built creator partnerships and led cold outreach team.</li>
-                <li>Created content for X (Twitter) and held value-driven partner calls.</li>
-                <li><strong>Results:</strong> Onboarded 20+ projects and launched 4 creators.</li>
+                <li>Created and carried out plans to bring creators on board and build key partnerships within the Web3 creative space.</li>
+                <li>Built a database of creative projects/artists for collaboration and a team doing cold outreach.</li>
+                <li>Made engaging content for X (Twitter) and held calls with potential partners to explain our value.</li>
+                <li><strong>Results:</strong> Secured 20 interested projects and successfully launched 4 creators on the platform, despite a nascent USP.</li>
             </ul>
         </div>
 
         <div class="experience-item">
-            <h3>Head of Marketing | Skalfa | Mar 2022 – Oct 2023</h3>
+            <h3>Head of Marketing | Skalfa (Dating Software) | March 2022 – October 2023</h3>
             <ul>
-                <li>Led marketing and SEO strategies to boost user engagement.</li>
-                <li>Created niche blog articles and revitalized email campaigns (avg. 19.3% open rate).</li>
+                <li>Led the creation and execution of marketing strategies to grow user acquisition and engagement significantly.</li>
+                <li>Guided sales, SEO, and design teams to boost lead generation plans into action.</li>
+                <li>Creating in-depth niche articles for the blog as part of the SEO strategy.</li>
+                <li>Achieved stable top-3 Google search rankings by optimizing SEO strategies.</li>
+                <li>Revitalized email marketing for the existing database, achieving an average open rate of 19.3%.</li>
             </ul>
         </div>
 
         <div class="experience-item">
-            <h3>Marketing Team Lead | Integral Relationship Center | Oct 2020 – Jan 2022</h3>
+            <h3>Marketing Team Lead | Integral Relationship Center (Online Courses, Psychology) | October 2020 – January 2022</h3>
             <ul>
-                <li>Ran targeted digital campaigns and managed content across platforms.</li>
+                <li>Developed and managed social media content and email marketing campaigns to connect better with our audience.</li>
+                <li>Ran targeted digital campaigns that successfully increased customer engagement and sales for online psychology courses.</li>
             </ul>
         </div>
 
         <div class="experience-item">
-            <h3>Freelance Marketing & Content Creator | Jan 2019 – Oct 2020</h3>
+            <h3>Freelance Marketing and Content Creator | Remote | January 2019 – October 2020</h3>
             <ul>
-                <li>Created brand concepts, WordPress sites, and digital strategy.</li>
+                <li>Developed online brand concepts and digital strategies, including building WordPress websites.</li>
+                <li>Created engaging social media content and wrote compelling copy for web pages, shaping the brand's voice.</li>
             </ul>
         </div>
 
         <div class="experience-item">
-            <h3>Product Marketing Manager | Amasty | Nov 2016 – Nov 2018</h3>
+            <h3>Product Marketing Manager | Amasty | November 2016 – November 2018</h3>
             <ul>
-                <li>Improved landing pages and wrote technical SEO content.</li>
+                <li>Created and improved landing pages with a persuasive copy to increase conversion rates.</li>
+                <li>Developed and put SEO strategies into practice, writing technical articles that boosted online visibility.</li>
+                <li>Looked at customer requests and competitor offerings to help guide product development and market positioning.</li>
             </ul>
         </div>
 
         <div class="experience-item">
-            <h3>Project Manager | Sarmont | May 2016 – Nov 2016</h3>
+            <h3>Project Manager | Marketing Research Company 'Sarmont' | May 2016 – November 2016</h3>
             <ul>
-                <li>Led research projects: surveys, focus groups, and shopper studies.</li>
+                <li>Managed marketing research projects from start to finish, including surveys, focus groups, and 'mystery shopper' initiatives.</li>
+                <li>Handled recruitment for studies and managed reporting activities to keep projects running smoothly.</li>
             </ul>
         </div>
 
         <div class="experience-item">
-            <h3>CMO Assistant | ChangeAgain.me | Jul 2015 – Oct 2015</h3>
+            <h3>CMO Assistant in a Start-up | ChangeAgain.me | July 2015 – October 2015</h3>
             <ul>
-                <li>Managed web content, SEO, email marketing, and ad campaigns.</li>
-                <li>Monitored web performance and competitor activities to drive engagement and growth.</li>
+                <li>Managed and improved website content, social media accounts, and digital ad campaigns (SEO, email marketing).</li>
+                <li>Monitored website performance and competitor activities to drive engagement and growth during a key startup phase.</li>
             </ul>
+
         </div>
 
         <h2>EDUCATION</h2>
