--- a/cv_alexandra_zhos.html
+++ b/cv_alexandra_zhos.html
@@ -172,7 +172,7 @@
             }
             .cv-container {
                 margin: 0;
-                padding: 10mm 15mm; /* Adjusted print margins for more content space */
+                padding: 7mm 10mm; /* Adjusted print margins for more content space */
                 max-width: 100%; /* Allow full width for print */
                 border: none; /* Remove border for print */
                 box-shadow: none; /* Remove shadow for print */
@@ -315,21 +315,19 @@
             </ul>
         </div>
 
-        <div class="experience-item">
-            <h3>Project Manager | Marketing Research Company 'Sarmont' | May 2016 – November 2016</h3>
+       <div class="experience-item">
+            <h3>Project Manager | Sarmont | May 2016 – Nov 2016</h3>
             <ul>
-                <li>Managed marketing research projects from start to finish, including surveys, focus groups, and 'mystery shopper' initiatives.</li>
-                <li>Handled recruitment for studies and managed reporting activities to keep projects running smoothly.</li>
+                <li>Led research projects: surveys, focus groups, and shopper studies.</li>
             </ul>
         </div>
 
         <div class="experience-item">
-            <h3>CMO Assistant in a Start-up | ChangeAgain.me | July 2015 – October 2015</h3>
+            <h3>CMO Assistant | ChangeAgain.me | Jul 2015 – Oct 2015</h3>
             <ul>
-                <li>Managed and improved website content, social media accounts, and digital ad campaigns (SEO, email marketing).</li>
-                <li>Monitored website performance and competitor activities to drive engagement and growth during a key startup phase.</li>
+                <li>Managed web content, SEO, email marketing, and ad campaigns.</li>
+                <li>Monitored web performance and competitor activities to drive engagement and growth.</li>
             </ul>
-
         </div>
 
         <h2>EDUCATION</h2>
