--- a/cv_alexandra_zhos.html
+++ b/cv_alexandra_zhos.html
@@ -126,7 +126,7 @@
 
         .button-container {
             text-align: center;
-            margin-top: 25px; /* Adjusted margin */
+            margin-top: 15px; /* Adjusted margin */
             /* Hide button when printing */
             @media print {
                 display: none;
@@ -239,19 +239,16 @@
                 <ul>
                     <li>Digital Marketing (SEO, Google Ads, SMM, Email Marketing)</li>
                     <li>Product Launch & Positioning</li>
-                    <li>Sales Funnel Optimization</li>
                     <li>Lead Generation</li>
                     <li>Cold Outreach</li>
-                    <li>User Engagement Boosting Strategies</li>
                     <li>Content Strategy</li>
                 </ul>
             </div>
 
             <div class="skill-category">
-                <h3>Content Production:</h3>
+                <h3>Other Skills:</h3>
                 <ul>
-                    <li>AI Image & Video Generation (Google Veo 2/3, KLING 2.1, HeyGen, Seedance)</li>
-                    <li>Prompt Engineering (Visual & Text)</li>
+                    <li>AI Image & Video Generation (Google Veo 2/3, KLING 2.1, HeyGen)</li>
                     <li>Video & Photo Editing (Adobe Premiere Pro / Photoshop)</li>
                     <li>Storytelling</li>
                     <li>Copywriting (Marketing, Technical, Social Media)</li>
@@ -294,7 +291,7 @@
             <h3>Marketing Team Lead | Integral Relationship Center (Online Courses, Psychology) | October 2020 – January 2022</h3>
             <ul>
                 <li>Developed and managed social media content and email marketing campaigns to connect better with our audience.</li>
-                <li>Ran targeted digital campaigns that successfully increased customer engagement and sales for online psychology courses.</li>
+                <li>Ran marketing campaigns that successfully increased customer engagement and sales for online psychology courses. (Facebook)</li>
             </ul>
         </div>
 
@@ -302,7 +299,7 @@
             <h3>Freelance Marketing and Content Creator | Remote | January 2019 – October 2020</h3>
             <ul>
                 <li>Developed online brand concepts and digital strategies, including building WordPress websites.</li>
-                <li>Created engaging social media content and wrote compelling copy for web pages, shaping the brand's voice.</li>
+
             </ul>
         </div>
 
@@ -310,8 +307,8 @@
             <h3>Product Marketing Manager | Amasty | November 2016 – November 2018</h3>
             <ul>
                 <li>Created and improved landing pages with a persuasive copy to increase conversion rates.</li>
-                <li>Developed and put SEO strategies into practice, writing technical articles that boosted online visibility.</li>
-                <li>Looked at customer requests and competitor offerings to help guide product development and market positioning.</li>
+                <li>Collaborated with product managers on feature implementation, informed by market research and client requests.</li>
+              
             </ul>
         </div>
 
