--- a/cv_alexandra_zhos.html
+++ b/cv_alexandra_zhos.html
@@ -218,8 +218,8 @@
 
         <h2>SUMMARY / CAREER OBJECTIVE</h2>
         <p>A seasoned professional with 8+ years of diverse experience in marketing, business development, and content creation across various industries, from tech and Web3 to personal development courses. I'm passionate about discovering unusual yet grounded solutions and bring bold, impactful ideas to life.</p>
-        <p>Eager to transition into Project or Product Management roles within forward-thinking teams. My strong preference is for companies that leverage AI and are driven by innovation.</p>
-        <p>I learn fast, dive deep, and move ideas into action.</p>
+        <p>Eager to transition into Project or Product Management roles within forward-thinking teams. My preference is for companies that leverage AI and are driven by innovation.</p>
+
 
         <h2>KEY SKILLS</h2>
         <div class="skills-grid-container">
@@ -251,7 +251,7 @@
                     <li>AI Image & Video Generation (Google Veo 2/3, KLING 2.1, HeyGen)</li>
                     <li>Video & Photo Editing (Adobe Premiere Pro / Photoshop)</li>
                     <li>Storytelling</li>
-                    <li>Copywriting (Marketing, Technical, Social Media)</li>
+                    <li>Copywriting</li>
                 </ul>
             </div>
         </div>
@@ -290,8 +290,8 @@
         <div class="experience-item">
             <h3>Marketing Team Lead | Integral Relationship Center (Online Courses, Psychology) | October 2020 – January 2022</h3>
             <ul>
-                <li>Developed and managed social media content and email marketing campaigns to connect better with our audience.</li>
-                <li>Ran marketing campaigns that successfully increased customer engagement and sales for online psychology courses. (Facebook)</li>
+                <li>Led the team in developing and managing social media and email marketing campaigns.</li>
+    
             </ul>
         </div>
 
@@ -323,7 +323,6 @@
             <h3>CMO Assistant | ChangeAgain.me | Jul 2015 – Oct 2015</h3>
             <ul>
                 <li>Managed web content, SEO, email marketing, and ad campaigns.</li>
-                <li>Monitored web performance and competitor activities to drive engagement and growth.</li>
             </ul>
         </div>
 
