--- a/cv_alexandra_zhos.html
+++ b/cv_alexandra_zhos.html
@@ -188,7 +188,7 @@
                 background-color: transparent; /* No background for print */
                 box-shadow: none; /* No shadow for print */
                 border-radius: 0; /* No rounded corners for print */
-                padding-top: 3px;
+                padding-top: 0px;
                 padding-bottom: 3px;
             }
             h1, h2, h3, h4, h5, h6 {
@@ -216,7 +216,7 @@
         <p class="header-info">Project & Product Lead | Marketing Manager</p>
         <p class="header-info">Istanbul, Turkiye | zhosalexandra@gmail.com | +905526162820</p>
 
-        <h2>SUMMARY / CAREER OBJECTIVE</h2>
+        <h2>SUMMARY</h2>
         <p>A seasoned professional with 8+ years of diverse experience in marketing, business development, and content creation across various industries, from tech and Web3 to personal development courses. I'm passionate about discovering unusual yet grounded solutions and bring bold, impactful ideas to life.</p>
         <p>Eager to transition into Project or Product Management roles within forward-thinking teams. My preference is for companies that leverage AI and are driven by innovation.</p>
 
