--- a/cv_alexandra_zhos.html
+++ b/cv_alexandra_zhos.html
@@ -238,7 +238,7 @@
                 <h3>Marketing:</h3>
                 <ul>
                     <li>Digital Marketing (SEO, Google Ads, SMM, Email Marketing)</li>
-                    <li>Product Launch & Positioning</li>
+                    <li>Product Launch</li>
                     <li>Lead Generation</li>
                     <li>Cold Outreach</li>
                     <li>Content Strategy</li>
@@ -249,7 +249,7 @@
                 <h3>Other Skills:</h3>
                 <ul>
                     <li>AI Image & Video Generation (Google Veo 2/3, KLING 2.1, HeyGen)</li>
-                    <li>Video & Photo Editing (Adobe Premiere Pro / Photoshop)</li>
+                    <li>Video & Photo Editing (Adobe Products)</li>
                     <li>Storytelling</li>
                     <li>Copywriting</li>
                 </ul>
@@ -269,19 +269,18 @@
         <div class="experience-item">
             <h3>Business Development Manager | Web3 Startup (Ordinals Marketplace / Gamified AI-generation tool for artists) | October 2024 – March 2025</h3>
             <ul>
-                <li>Created and carried out plans to bring creators on board and build key partnerships within the Web3 creative space.</li>
+                <li>Created and carried out plans to bring creators on board and build key partnerships.</li>
                 <li>Built a database of creative projects/artists for collaboration and a team doing cold outreach.</li>
                 <li>Made engaging content for X (Twitter) and held calls with potential partners to explain our value.</li>
-                <li><strong>Results:</strong> Secured 20 interested projects and successfully launched 4 creators on the platform, despite a nascent USP.</li>
+                <li><strong>Results:</strong> Secured 20 interested projects and launched 4 creators on the platform, despite a nascent USP.</li>
             </ul>
         </div>
 
         <div class="experience-item">
             <h3>Head of Marketing | Skalfa (Dating Software) | March 2022 – October 2023</h3>
             <ul>
-                <li>Led the creation and execution of marketing strategies to grow user acquisition and engagement significantly.</li>
+                <li>Led the creation and execution of marketing strategies to grow user acquisition and engagement.</li>
                 <li>Guided sales, SEO, and design teams to boost lead generation plans into action.</li>
-                <li>Creating in-depth niche articles for the blog as part of the SEO strategy.</li>
                 <li>Achieved stable top-3 Google search rankings by optimizing SEO strategies.</li>
                 <li>Revitalized email marketing for the existing database, achieving an average open rate of 19.3%.</li>
             </ul>
