--- a/cv_alexandra_zhos.html
+++ b/cv_alexandra_zhos.html
@@ -227,10 +227,11 @@
                 <h3>Project Management:</h3>
                 <ul>
                     <li>Project Planning & Coordination</li>
+                    <li>Team Coordination & Collaboration</li>
                     <li>Market & Trend Analysis</li>
                     <li>Partnership Development</li>
                     <li>Problem-Solving</li>
-                    <li>Team Coordination & Collaboration</li>
+            
                 </ul>
             </div>
 
@@ -246,12 +247,12 @@
             </div>
 
             <div class="skill-category">
-                <h3>Other Skills:</h3>
+                <h3>Tools:</h3>
                 <ul>
                     <li>AI Image & Video Generation (Google Veo 2/3, KLING 2.1, HeyGen)</li>
-                    <li>Video & Photo Editing (Adobe Products)</li>
-                    <li>Storytelling</li>
-                    <li>Copywriting</li>
+                    <li>Adobe Products</li>
+                    <li>Notion</li>
+                    <li>Jira, Trello</li>
                 </ul>
             </div>
         </div>
